Fixing some alignment and sizing.

--- a/_sass/components/_general.scss
+++ b/_sass/components/_general.scss
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6{
   height: 3.0em;
   top: -3.0em;
   line-height: 3.0em;
-  margin-bottom: -3em;
+  // margin-bottom: -3em;
   margin-left: -12.5em;
   z-index: 3;
 
@@ -133,24 +133,14 @@ h1, h2, h3, h4, h5, h6{
   //Box
   background-color: white;
   border-radius: 20px;
-
-  &.contact{
-    color: white;
-    background-color: #334561;
-  }
 }
 
 .main-section{
   justify-content: center;
   position: relative;
-  padding: 6em 0 3em 0;
+  padding: 3em 0 6em 0;
   background-color: white;
   text-align: center;
-
-  &.contact{
-    background-color: #334561;
-  }
-
 }
 
 .construction{
