--- a/_sass/components/_projects.scss
+++ b/_sass/components/_projects.scss
@@ -8,10 +8,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 4;
 
   ul{
-    padding: 0 0 5em 0;
+    padding: 3em 0 5em 0;
+    z-index: 4;
   }
 
   li{
